--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         <li><a class="nav-list" href="#contact">CONTACT</a></li>
       </ul>
     </div>
-    <div class="bg-image">
+    <div class="bg-image" id="home">
       <div class="main">
         <div class="image">
           <img
@@ -558,8 +558,7 @@
             taciti sociosqu ad litora torquent per conubia nostra, per inceptos
             himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus
             condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet
-            nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed
-            fermentum feugiat, velit mauris egestas quam.
+            nisi. Proin condimentum fermentum nunc. 
           </p>
           <br />
           <center>
@@ -570,7 +569,7 @@
         </div>
       </div>
     </div>
-    <div class="boxes">
+    <div class="boxes" id="about">
       <div>
         <div class="box1">
           <h2>Great Design</h2>
@@ -658,7 +657,7 @@
         </div>
       </div>
     </div>
-    <div class="bottom">
+    <div class="bottom" id="portfolio">
       <div id="block">
         <button class="button1" style="background-color: lightcoral;">Company</button>
         <button class="button1">Award</button>
@@ -690,7 +689,7 @@
       />
     </div>
     <br />
-    <p style="text-align: center">
+    <p style="text-align: center" id="contact">
         Copyright © 2084 Company Name | Designed by free responsive templates
       </p>
       <br />
