--- a/index.html
+++ b/index.html
@@ -549,8 +549,7 @@
             about us. Thank you. Credits go to <b>Unsplash</b> for images, <b>Art
             Professions Icon Set</b> and <b>Ballicons 2 Icon Set</b> from Smashing
             Magazine. Lorem quis bibendum auctor, nisi elit consequat ipsum, nec
-            sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate
-            cursus a sit amet mauris. Morbi accumsan ipsum velit.
+            sagittis sem nibh id elit.Morbi accumsan ipsum velit.
           </p>
           <br />
           <p>
