--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       }
       
       .bg-image {
-        background-image: url("../assets/images/bgimg.jpg");
+        background-image: url("https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcQz_4MeThHJ86fLzo73-EvVSAlR79baCZN6s3gTFQmCcVSij98S");
         background-size: cover;
         height: 25rem;
         color: white;
